fixed alignment navBar and portrait view

--- a/src/components/NavBar/NavBarPhone.module.scss
+++ b/src/components/NavBar/NavBarPhone.module.scss
@@ -6,9 +6,10 @@
   height: fit-content;
   border-radius: 1.2rem;
   overflow: hidden;
-  margin-top: 800px;
+  margin-top: 400px;
   cursor: auto;
   font-size: var(--text-xs);
+
 }
 
 .hamburger,
